# Telegram-Anti-Revoke

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README-CN.md  README.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md  QUESTION.md  bug_report.md  feature_request.md  question.md
.github/workflows/: windows-msvc.yml
Docs/: Build.md
Source/: AntiRevoke.cpp  Assembly.asm  CMakeLists.txt  Config.h  Config.h.in  DllMain.cpp  Global.h  Header.h  IAntiRevoke.cpp  IAntiRevoke.h  ILogger.cpp  ILogger.h  IRuntime.cpp  IRuntime.h  IUpdater.cpp  IUpdater.h  Logger.cpp  Logger.h  QtString.cpp  QtString.h  RealMain.cpp  Resource.h  Telegram.cpp  Telegram.h  TelegramAntiRevoke.rc  Updater.cpp  Updater.h  Utils.cpp  Utils.h
Source/Common/: Config.h.in
Source/Core/: CMakeLists.txt  DllMain.cpp  IAntiRevoke.cpp  IAntiRevoke.h  IRuntime.cpp  IRuntime.h  IUpdater.cpp  IUpdater.h  Logger.cpp  Logger.h  Main.cpp  QtString.cpp  QtString.h  RealMain.cpp  Telegram.cpp  Telegram.h  TelegramAntiRevoke.rc  Utils.cpp  Utils.h
Source/Core/OS/Windows/: DllMain.cpp  DllMain.h
Source/Launcher/: CMakeLists.txt  Main.cpp  Resource.h  Resource.rc
Source/TelegramAntiRevoke/: AntiRevoke.cpp  AntiRevoke.h  DllMain.cpp  Global.h  Header.h  Logger.cpp  Logger.h  QtString.cpp  QtString.h  RealMain.cpp  Telegram.cpp  TelegramAntiRevoke.aps  TelegramAntiRevoke.rc  Utils.cpp  Utils.h
